--- a/doc/trunk/design/syn/S13.pod
+++ b/doc/trunk/design/syn/S13.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 2 Nov 2004
-  Last Modified: 1 Apr 2006
+  Last Modified: 18 Aug 2006
   Number: 13
-  Version: 4
+  Version: 5
 
 =head1 Overview
 
@@ -53,11 +53,10 @@ Now if you call C<uc()> on any Turkish string, it will call your function
 rather than the built-in one.  Putting the C<multi> into the C<*>
 namespace makes it show up in everyone's packages, but as long as no one
 else defines a version of C<uc> on C<TurkishStr>, there's no collision.
-The types of the invocants are included in the "long name" of any C<multi>
-sub or method.
 
-If you want to overload string concatenation for Arabic strings
-so you can handle various ligatures, you can say:
+The types of the parameters are included in the I<longname> of any C<multi>
+sub or method.  So if you want to overload string concatenation for Arabic
+strings so you can handle various ligatures, you can say:
 
     multi sub *infix:<~>(ArabicStr $s1, ArabicStr $s2) {...}
     multi sub *infix:<~>(Str $s1, ArabicStr $s2) {...}
