conjecture about conversion of undef to NaN grammo from Mark Reed++
git-svn-id: http://svn.pugscode.org/pugs@23542 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -471,10 +471,15 @@ about failures (i.e. unthrown exceptions):
 
     my Int $x = undef;    # works
 
-Variables with native types does not support undefinedness: it is an error
+Variables with native types do not support undefinedness: it is an error
 to assign an undefined value to them:
 
     my int $y = undef;    # dies
+
+Conjecture: num might support the autoconversion of undef to NaN, since
+the floating-point form can represent this concept.  Might be better
+to make that conversion optional though, so that the rocket designer
+can decide whether to self-destruct immediately or shortly thereafter.
 
 =item *
 
