--- a/doc/trunk/design/syn/S09.pod
+++ b/doc/trunk/design/syn/S09.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 13 Sep 2004
-  Last Modified: 26 July 2006
+  Last Modified: 18 Aug 2006
   Number: 9
-  Version: 12
+  Version: 13
 
 =head1 Overview
 
@@ -602,6 +602,22 @@ autothreading on that parameter.  Only individually declared parameters
 may autothread.  (Note that positional array and hash parameters are
 in fact scalar parameters, though, so you could pass a junction of
 array or hash objects.)
+
+For junctions used with chained operators in a list context, the resulting
+value will be a subset of the first C<any> used in comparison:
+
+    for 0 <= any(@x) < all(@y) {...}
+
+will use only those values from C<@x> that satisfy the constraint.
+Usually junctions do not guarantee order of evalution, but in
+this particular case, the original ordering C<@x> is guaranteed to
+be preserved in the returned list.  In particular,
+
+    @result = any(@x) ~~ {...};
+
+is equivalent to
+
+    @result = grep {...}, @x;
 
 =head1 Parallelized parameters and autothreading
 
