Clarified that leading whitespace eats all subsequent whitespace.
git-svn-id: http://svn.pugscode.org/pugs@23545 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -1654,7 +1654,7 @@ The C<but I<NAME> (I<DATA>)> syntax specifies run-time properties on values:
 
     sub system {
         ...
-        return $error but false if $error;
+        return $error but False if $error;
         return 0 but True;
     }
 
