--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -14,9 +14,9 @@ Allison Randal <al@shadowed.net>
    Maintainer: Patrick Michaud <pmichaud@pobox.com> and
                Larry Wall <larry@wall.org>
    Date: 24 Jun 2002
-   Last Modified: 16 Aug 2006
+   Last Modified: 21 Aug 2006
    Number: 5
-   Version: 32
+   Version: 33
 
 This document summarizes Apocalypse 5, which is about the new regex
 syntax.  We now try to call them I<regex> rather than "regular
@@ -641,19 +641,23 @@ a left parenthesis, it really is a call:
 
     <foo('bar')>
 
-If the first character is a colon, the rest of the text (following any
-whitespace) is passed as a string, so the previous may also be written as:
-
-    <foo: bar>
-
-If the first character is whitespace, the subsequent text is passed as regex,
-so:
+If the first character after the angle is whitespace, the
+subsequent text (following any whitespace) is passed as regex, so:
 
     <foo bar>
 
 is more or less equivalent to
 
     <foo(/bar/)>
+
+To pass a regex with leading whitespace you must use the parenthsized form.
+
+If the first character is a colon, the rest of the text (following any
+whitespace) is passed as a string, so the previous may also be written as:
+
+    <foo: bar>
+
+To pass a string with leading whitespace you must use the parenthsized form.
 
 If the first character is a plus or minus, the initial identifier is taken
 as a character class, so
