Typo from Aaron Crane++
git-svn-id: http://svn.pugscode.org/pugs@23546 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -650,14 +650,14 @@ is more or less equivalent to
 
     <foo(/bar/)>
 
-To pass a regex with leading whitespace you must use the parenthsized form.
+To pass a regex with leading whitespace you must use the parenthesized form.
 
 If the first character is a colon, the rest of the text (following any
 whitespace) is passed as a string, so the previous may also be written as:
 
     <foo: bar>
 
-To pass a string with leading whitespace you must use the parenthsized form.
+To pass a string with leading whitespace you must use the parenthesized form.
 
 If the first character is a plus or minus, the initial identifier is taken
 as a character class, so
