Change "If the first character after the angle is whitespace" to "If the first character after the identifier is whitespace" for <before regex> constructs.
git-svn-id: http://svn.pugscode.org/pugs@23547 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -641,7 +641,7 @@ a left parenthesis, it really is a call:
 
     <foo('bar')>
 
-If the first character after the angle is whitespace, the
+If the first character after the identifier is whitespace, the
 subsequent text (following any whitespace) is passed as regex, so:
 
     <foo bar>
