* grammar nit, and clarify that it is the assign-to-scalar that Arrayify a list.
git-svn-id: http://svn.pugscode.org/pugs@23550 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -1412,7 +1412,8 @@ is equivalent to:
 
     $a = ('a','b');
 
-which, because the list is in scalar context, is autopromoted an Array object:
+which, because the list is assigned to a scalar, is autopromoted into
+an Array object:
 
     $a = ['a','b'];
 
