--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -1396,13 +1396,17 @@ The C<qw/foo bar/> quote operator now has a bracketed form: C<< <foo bar> >>.
 When used as a subscript it performs a slice equivalent to C<{'foo','bar'}>.
 Elsewhere it is equivalent to a parenthesisized list of strings:
 C<< ('foo','bar') >>.  Since parentheses are generally reserved just for
-precedence grouping, they merely autointepolate in list context.  Therefore
+precedence grouping, they merely autointerpolate in list context.  Therefore
 
-    @a = 1, < 2 3 >, 4;
+    @a = 1, < x y >, 2;
 
-is equivalent to
+is equivalent to:
 
-    @a = 1, 2, 3, 4;
+    @a = 1, ('x', 'y'), 2;
+
+which is the same as:
+
+    @a = 1, 'x', 'y', 2;
 
 In scalar context, though, the implied parentheses are not removed, so
 
@@ -1410,12 +1414,12 @@ In scalar context, though, the implied parentheses are not removed, so
 
 is equivalent to:
 
-    $a = ('a','b');
+    $a = ('a', 'b');
 
 which, because the list is assigned to a scalar, is autopromoted into
 an Array object:
 
-    $a = ['a','b'];
+    $a = ['a', 'b'];
 
 Likewise, if bound to a scalar parameter, C<< <a b> >> will be
 treated as a single list object, but if bound to a slurpy parameter,
