16:06 < agentzh> audreyt: could you fix the "modifer" typo in S04 for me? :)
git-svn-id: http://svn.pugscode.org/pugs@23554 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -331,7 +331,7 @@ is actually short for:
 so you can modify the current list element in that case.  However,
 any time you specify the arguments, they default to read only.
 
-When used as statement modifers, C<for> and C<given> use a private
+When used as statement modifiers, C<for> and C<given> use a private
 instance of C<$_> for the left side of the statement.  The outer C<$_>
 can be referred to as C<$OUTER::_>.  (And yes, this implies that the
 compiler may have to retroactively change the binding of <$_> on the
